--- a/source/_posts/2021-02-19-music-dl-1.md
+++ b/source/_posts/2021-02-19-music-dl-1.md
@@ -1,7 +1,8 @@
 ---
 title: music-dl(1) 프로젝트를 시작하게 된 이유
 date: 2021-02-19 17:12:04
-tags:
+tags: [muisic-dl, Side project]
+
 ---
 
 나는 중학생 때부터 노래듣는 걸 좋아했다.
