--- a/source/_posts/2021-08-21-music-dl-2.md
+++ b/source/_posts/2021-08-21-music-dl-2.md
@@ -1,7 +1,7 @@
 ---
 title: music-dl(2) 프로젝트 구성과정
 date: 2021-08-21 19:28:00
-tags:
+tags: [muisic-dl, Side project]
 ---
 
 이전 글에서는 music-dl 프로젝트를 시작하게 된 이유를 아주 길게 설명했다.
